--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,14 @@
 apply plugin: 'com.android.application'
+apply from: '../dependencies.gradle'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "25.0.2"
+    compileSdkVersion versions.compileSdk
+    buildToolsVersion versions.buildTools
 
     defaultConfig {
         applicationId "org.challenge.calendar"
-        minSdkVersion 19
-        targetSdkVersion 24
+        minSdkVersion versions.minSdk
+        targetSdkVersion versions.targetSdk
         versionCode 1
         versionName "1.0"
     }
@@ -20,9 +21,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    testCompile 'junit:junit:' + versions.junit
     compile 'com.squareup:android-times-square:1.6.5@aar'
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:design:24.2.1'
+    compile project(':sectioned-recyclerview')
+    compile 'com.android.support:appcompat-v7:' + versions.supportLib
+    compile 'com.android.support:cardview-v7:' + versions.supportLib
+    compile 'com.android.support:design:' + versions.supportLib
 }
