--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:' + versions.junit
-    compile 'com.squareup:android-times-square:1.6.5@aar'
+    compile project(':times-square')
     compile project(':sectioned-recyclerview')
     compile 'com.android.support:appcompat-v7:' + versions.supportLib
     compile 'com.android.support:cardview-v7:' + versions.supportLib
