--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,8 +23,8 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:' + versions.junit
+    compile 'org.zakariya.stickyheaders:stickyheaders:0.7.6'
     compile project(':times-square')
-    compile project(':sectioned-recyclerview')
     compile 'com.android.support:appcompat-v7:' + versions.supportLib
     compile 'com.android.support:cardview-v7:' + versions.supportLib
     compile 'com.android.support:design:' + versions.supportLib
