Update .gitignore files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
-# Gradle files
-.gradle/
-build/
+.gradle
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
+.DS_Store
+/build
+*.idea*
+ads/Package/*
+*.iml
+*.alloc
+*.hprof
+
