--- a/times-square/build.gradle
+++ b/times-square/build.gradle
@@ -34,5 +34,9 @@ android {
   }
 }
 
-
+dependencies {
+  compile 'com.android.support:appcompat-v7:' + versions.supportLib
+  compile 'com.android.support:cardview-v7:' + versions.supportLib
+  compile 'com.android.support:design:' + versions.supportLib
+}
 //apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
