--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+//apply plugin: 'com.neenbedankt.android-apt'
 apply from: '../dependencies.gradle'
 
 android {
@@ -25,6 +26,11 @@ dependencies {
     testCompile 'junit:junit:' + versions.junit
     compile 'org.zakariya.stickyheaders:stickyheaders:0.7.6'
     compile project(':times-square')
+    compile 'com.google.dagger:dagger:2.11'
+    compile 'com.google.dagger:dagger-android:2.11'
+    compile 'com.google.dagger:dagger-android-support:2.11'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.11'
     compile 'com.android.support:appcompat-v7:' + versions.supportLib
     compile 'com.android.support:cardview-v7:' + versions.supportLib
     compile 'com.android.support:design:' + versions.supportLib
