--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="org.challenge.calendar">
 
     <uses-permission android:name="android.permission.READ_CALENDAR" />
-    <application
+    <application android:name=".CalendarApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
