--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,6 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:' + versions.junit
     compile 'org.zakariya.stickyheaders:stickyheaders:0.7.6'
     compile project(':times-square')
     compile 'com.google.dagger:dagger:2.11'
@@ -33,4 +32,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:' + versions.supportLib
     compile 'com.android.support:cardview-v7:' + versions.supportLib
     compile 'com.android.support:design:' + versions.supportLib
+
+    // dependencies for tests
+    testCompile 'junit:junit:' + versions.junit
+    testAnnotationProcessor 'com.google.dagger:dagger-compiler:2.11'
+    testAnnotationProcessor 'com.google.dagger:dagger-android-processor:2.11'
 }
